make categories editable

--- a/app/views/entries/_navigation.html.erb
+++ b/app/views/entries/_navigation.html.erb
@@ -1,8 +1,11 @@
 <ul>
   <li>
-    <%= link_to 'Home', action: 'index' %>
+    <%= link_to 'Home', root_path %>
   </li>
   <li>
     <%= link_to 'Add Entry', new_entry_path %>
+  </li>
+  <li>
+    <%= link_to 'Manage Categories', categories_path %>
   </li>
 </ul>
