--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -1,1 +1,1 @@
-<%= category.name %><br />
+<%= category.name %> <%= link_to 'Edit', edit_category_path(category) %> <%= link_to 'Delete', category, method: :delete, data: { confirm: 'Are you sure?' } %><br />
